agregar barra de navegacion

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,18 @@ h2{
     @apply text-xl font-bold;
 }
 
+table{
+    @apply text-left border border-separate rounded border-slate-200;
+}
+
+th{
+    @apply h-12 px-6 text-sm font-medium border-l first:border-l-0 stroke-slate-700 text-slate-700 bg-slate-100;
+}
+
+tr{
+    @apply transition-colors duration-300 hover:bg-slate-50;
+}
+
+td{
+    @apply h-12 px-6 text-sm transition duration-300 border-t border-l first:border-l-0 border-slate-200 stroke-slate-500 text-slate-500;
+}
